[gd_scene load_steps=2 format=3 uid="uid://dmmk4c3ssc833"]

[ext_resource type="Script" path="res://main.gd" id="1_suuuk"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_suuuk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.894118, 0.87451, 0.843137, 1)

[node name="Glyphs" type="Node2D" parent="."]

[node name="GlyphListContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.015625
anchor_top = 0.0401235
anchor_right = 0.153646
anchor_bottom = 0.958333
metadata/_edit_use_anchors_ = true

[node name="GlyphRotation" type="HSlider" parent="."]
layout_mode = 0
offset_left = 993.0
offset_top = 608.0
offset_right = 1121.0
offset_bottom = 624.0
min_value = -180.0
max_value = 180.0
rounded = true

[node name="GenerateTMRButton" type="Button" parent="."]
layout_mode = 0
offset_left = 987.0
offset_top = 21.0
offset_right = 1121.0
offset_bottom = 54.0
text = "Generate TMR"

[node name="TurnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 987.0
offset_top = 78.0
offset_right = 1121.0
offset_bottom = 111.0
text = "Player Turn"

[node name="ClearButton" type="Button" parent="."]
layout_mode = 0
offset_left = 841.0
offset_top = 21.0
offset_right = 975.0
offset_bottom = 54.0
text = "Clear"

[node name="DebugButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 693.0
offset_top = 21.0
offset_right = 827.0
offset_bottom = 54.0
text = "Debug"

[node name="TMRTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 840.0
offset_top = 135.0
offset_right = 1123.0
offset_bottom = 580.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Connections:"

[connection signal="value_changed" from="GlyphRotation" to="." method="_on_glyph_rotation_value_changed"]
[connection signal="button_up" from="GenerateTMRButton" to="." method="_on_generate_tmr_button_up"]
[connection signal="button_up" from="TurnButton" to="." method="_on_turn_button_button_up"]
[connection signal="button_up" from="ClearButton" to="." method="_on_clear_button_button_up"]
[connection signal="button_up" from="DebugButton" to="." method="_on_debug_button_button_up"]
